@@ -65,6 +65,19 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
         <!--  Logging -->
+        <dependency>
+
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            logback.xml        </dependency>
 
         <!--  Utils  -->
         <!-- https://mvnrepository.com/artifact/org.threeten/threetenbp -->
@@ -214,7 +227,7 @@
                 <configuration>
                     <forkCount>3</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Xmx1024m </argLine>
                 </configuration>
 
                 <!--  surefire plugin version managed by Spring Boot  -->
@@ -227,7 +240,7 @@
                         </goals>
                         <configuration>
                             <includes>
-                                <include>**/*UnitTests.java</include>
+                                <include>**/*Test.java</include>
                             </includes>
                         </configuration>
                     </execution>
@@ -239,8 +252,8 @@
                         </goals>
                         <configuration>
                             <includes>
-                                <include>**/*IntegrationTests.*</include>
-                                <include>**/*UnitTests.*</include>
+                                <include>**/*IT.*</include>
+                                <include>**/*Test.*</include>
                             </includes>
                         </configuration>
                     </execution>
